# adafruitio

./: .gitignore  99-ftdi.rules  LICENSE  README.md  blink.py  display.py  drivelightsft232h.py  main.py  pyproject.toml  randon_blinker_2_leds.py  test_ft232h.py  wander.py
.github/workflows/: lint.yml
